<resources>
    <string name="app_name">Exploring intents</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent_action">Implicit Intent + Action</string>
    <string name="implicit_intent_action_and_category">Implicit Intent + Action + Category</string>
    <string name="open_page">Open Page</string>
    <string name="make_a_call">Make a call</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="go_to_main_activity">Go To MainActivity</string>
    <string name="name">Name</string>
    <string name="create_account">a</string>
</resources>